<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_hot_deals"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/hot_deals" />
    </group>

    <item android:title="@string/categories">
        <menu>
            <item
                android:id="@+id/fashion"
                android:icon="@drawable/food_pink"

                android:title="@string/fashion" />
            <item
                android:id="@+id/shoes"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/shoes" />
            <item
                android:id="@+id/accessories"
                android:icon="@drawable/ic_accessories_2"
                android:title="@string/accessories" />
            <item
                android:id="@+id/home_furnishings"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/home_furnishings" />
            <item
                android:id="@+id/beauty_salons_health"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/beauty_salons_and_health" />
            <item
                android:id="@+id/electronics"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/electronics" />
            <item
                android:id="@+id/food_and_drinks"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/food_and_drinks" />
            <item
                android:id="@+id/all_stores"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/all_stores" />
        </menu>
    </item>
    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">

        <item
            android:id="@+id/map"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/map">
        </item>
    </group>

</menu>